--- a/1-progeto-components/src/app/card-roxo/card-roxo.component.scss
+++ b/1-progeto-components/src/app/card-roxo/card-roxo.component.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;800&family=Roboto+Mono:wght@100&display=swap');
 
-.card {
+.card-roxo {
     max-width: 350px;
-    background-color: #fd7557;
+    background-color: #ede1ff;
     border-radius: 25px;
     padding: 30px;
     font-family: 'Poppins', sans-serif;
@@ -25,7 +25,7 @@
         text-align: center;
         margin-top: 10px;
         border-radius: 25px;
-        background-color: white;
+        background-color: #a056d9;
         cursor: pointer;
         font-weight: bold;
     }
