--- a/1-progeto-components/src/app/card-button-cancel/card-button-cancel.component.scss
+++ b/1-progeto-components/src/app/card-button-cancel/card-button-cancel.component.scss
@@ -1,3 +1,9 @@
 .card-cancel-button {
-    background-color: black;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 10px;
+    border-radius: 25px;
+    background-color: red;
+    cursor: pointer;
+    font-weight: bold;
 }
