curso angular - :host ::ng-deep

--- a/1-progeto-components/src/app/card/card.component.scss
+++ b/1-progeto-components/src/app/card/card.component.scss
@@ -29,4 +29,10 @@
         cursor: pointer;
         font-weight: bold;
     }
+
 }
+
+:host ::ng-deep .card-cancel-button {
+    background-color: red !important;
+}
+
