--- a/1-progeto-components/src/app/card/card.component.scss
+++ b/1-progeto-components/src/app/card/card.component.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;800&family=Roboto+Mono:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;800&family=Roboto+Mono:wght@100&display=swap");
 
 .card {
     max-width: 350px;
     background-color: #fd7557;
     border-radius: 25px;
     padding: 30px;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 
     &__item {
         padding: 10px;
@@ -29,10 +29,12 @@
         cursor: pointer;
         font-weight: bold;
     }
-
 }
 
 :host ::ng-deep .card-cancel-button {
     background-color: red !important;
 }
 
+.global {
+    background-color: greenyellow;
+}
