curso angular - ViewEncapsulation.ShadowDom

--- a/1-progeto-components/src/app/card-roxo/card-roxo.component.html
+++ b/1-progeto-components/src/app/card-roxo/card-roxo.component.html
@@ -8,5 +8,5 @@
         <input matSliderThumb value="1.5">
     </mat-slider>
 
-    <div class="emulated">Emulated 2</div>
+    <div class="shadowdom">ShadowDom 2</div>
 </div>
