--- a/1-progeto-components/src/app/card/card.component.scss
+++ b/1-progeto-components/src/app/card/card.component.scss
@@ -35,6 +35,6 @@
     background-color: red !important;
 }
 
-.emulated {
-    background-color: brown;
+.shadowdom {
+    background-color: purple;
 }
