--- a/1-progeto-components/src/app/card/card.component.html
+++ b/1-progeto-components/src/app/card/card.component.html
@@ -8,5 +8,5 @@
         <input matSliderThumb value="1.5">
     </mat-slider>
 
-    <div class="emulated">Emulated</div>
+    <div class="shadowdom">ShadowDom</div>
 </div>
