--- a/2-projeto-eventos/src/styles.scss
+++ b/2-projeto-eventos/src/styles.scss
@@ -4,8 +4,17 @@
 /* styles.css */
 .container {
     @apply mx-auto px-[15px];
-  }
+}
 
-  .btn {
-    @apply text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700
-  }
+.btn {
+    @apply text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700;
+}
+
+.input-element {
+    @apply border border-gray-300 rounded p-2 bg-green-50 text-green-900 border-green-500;
+
+    &--disabled {
+        @apply cursor-not-allowed bg-red-50 border border-red-500 text-red-900 placeholder-red-700;
+    }
+}
+
