curso angular - Event Binding

--- a/2-projeto-eventos/src/app/app.component.html
+++ b/2-projeto-eventos/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="font-medium mb-3">Attribute Binding</h1>
+    <h1 class="font-medium mb-3">Event Binding</h1>
 
     <input [type]="inputType" [ngClass]="{ 'input-element': true, 'input-element--disabled': isDisabled }"
         placeholder="Digite o nome do evento" [value]="inputText" [disabled]="isDisabled"
