curso angular - Event Binding

--- a/2-projeto-eventos/src/app/app.component.html
+++ b/2-projeto-eventos/src/app/app.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="mt-1">
-        <button class="btn" (click)="setPasswornTypeInput()">Tipo Senha</button>
+        <button class="btn" (click)="setPasswordTypeInput()">Tipo Senha</button>
         <button class="btn" (click)="setTextTypeInput()">Tipo Texto</button>
     </div>
 
