curso angular - Decorator @Input

--- a/1-progeto-components/src/app/card/card.component.html
+++ b/1-progeto-components/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
-    <div class="card__plan card__item">Plano <b>{{ plano.tipo }}</b></div>
-    <div class="card__price card__item">{{ plano.getFullPrice() }}</div>
+    <div class="card__plan card__item">Plano <b>{{ playType }}</b></div>
+    <div class="card__price card__item">{{ playPrice }}</div>
     <app-card-button></app-card-button>
     <app-card-button-cancel></app-card-button-cancel>
 
