--- a/1-progeto-components/src/app/app.component.html
+++ b/1-progeto-components/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="flex flex-col xl:flex-row gap-4 items-center justify-center xl:justify-evenly w-full h-screen">
-  <app-card></app-card>
+  <app-card
+    [playType]="cardPlanType"
+    [playPrice]="cardPlanPrice">
+  </app-card>
   <app-card-roxo></app-card-roxo>
 </div>
