--- a/1-progeto-components/src/app/card/card.component.html
+++ b/1-progeto-components/src/app/card/card.component.html
@@ -1,7 +1,8 @@
 <div class="card">
     <div class="card__plan card__item">Plano <b>{{ playType }}</b></div>
     <div class="card__price card__item">{{ playPrice }}</div>
-    <app-card-button></app-card-button>
+
+    <app-card-button (buttonClick)="buttonClicked($event)"></app-card-button>
     <app-card-button-cancel></app-card-button-cancel>
 
     <mat-slider min="1" max="5" step="0.5">
