curso angular - Criação de um Componente Parte 2

--- a/1-projeto-components/src/app/app.html
+++ b/1-projeto-components/src/app/app.html
@@ -1,2 +1,4 @@
-<h1>App Component</h1>
-<app-card></app-card>
+<div class="cards-container">
+    <app-card></app-card>
+    <app-card-roxo></app-card-roxo>
+</div>
