--- a/1-projeto-components/src/app/card/card.html
+++ b/1-projeto-components/src/app/card/card.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card__plan card__item">Plano <b>{{ plano.tipo }}</b></div>
-    <div class="card__price card__item">{{ plano.get_preco() }}</div>
+    <div class="card__plan card__item">Plano <b>{{ plano?.tipo }}</b></div>
+    <div class="card__price card__item">{{ plano?.get_preco() }}</div>
     <app-card-button></app-card-button>
 </div>
